--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     </head>
     <body>
         <div class="header">
-            
+            <p id="header-logo">Header Logo</p>
+            <ul id="header-links">
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
+            </ul>
         </div>
         <div class="hero">
 
