--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     </head>
     <body>
         <div class="header">
-            <p id="header-logo">Header Logo</p>
-            <ul id="header-links">
+            <p class="header-logo">Header Logo</p>
+            <ul class="header-links">
                 <li><a>header link one</a></li>
                 <li><a>header link two</a></li>
                 <li><a>header link three</a></li>
             </ul>
         </div>
         <div class="hero">
-
+            <div class=""></div>
         </div>
         <div class="content-one">
 
