--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             </ul>
         </div>
         <div class="hero">
-            <div class=""></div>
+            <div class="left-content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="image-placeholder">this is a placeholder for an image</div>
         </div>
         <div class="content-one">
 
