--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
             <div class="image-placeholder">this is a placeholder for an image</div>
         </div>
         <div class="content-one">
-
+            <h1>Some random information</h1>
+            <div class="card-container">
+                <div class="card">
+                    <div class="box"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
         </div>
         <div class="content-two">
 
