--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </div>
         </div>
         <div class="content-two">
-
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-source"></p>
         </div>
         <div class="content-three">
 
