add content to section three

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             <p class="quote-source"></p>
         </div>
         <div class="content-three">
-
+            <div class="bg-box">
+                <h2>Call to action! It's time!</h2>
+            </div>
         </div>
         <div class="footer">
 
