--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
         </div>
         <div class="content-three">
             <div class="bg-box">
-                <h2>Call to action! It's time!</h2>
+                <div class="left-content">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
             </div>
         </div>
         <div class="footer">
-
+            <p>Copyright © The Odin Project 2021</p>
         </div>
     </body>
 </html>
