--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div class="header">
             <p class="header-logo">Header Logo</p>
             <ul class="header-links">
-                <li><a>header link one</a></li>
-                <li><a>header link two</a></li>
-                <li><a>header link three</a></li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
         </div>
         <div class="hero">
