change classes for margin consistency
Added classes "left-margin" and "right-margin" to relevant sections to
keep margin styling easy and consistent

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <div class="image-placeholder">this is a placeholder for an image</div>
+            <div class="image-placeholder right-content">this is a placeholder for an image</div>
         </div>
         <div class="content-one">
             <h1>Some random information</h1>
@@ -49,8 +49,8 @@
             <p class="quote-source"></p>
         </div>
         <div class="content-three">
-            <div class="bg-box">
-                <div class="left-content">
+            <div class="bg-box left-content right-content">
+                <div>
                     <h2>Call to action! It's time!</h2>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
