--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
             </ul>
         </div>
         <div class="hero">
-            <div class="left-content">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
+            <div class="hero-container left-content right-content">
+                <div>
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="image-placeholder">this is a placeholder for an image</div>
             </div>
-            <div class="image-placeholder right-content">this is a placeholder for an image</div>
         </div>
         <div class="content-one">
             <h1>Some random information</h1>
