--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="content-one">
             <h1>Some random information</h1>
-            <div class="card-container">
+            <div class="card-container left-content right-content">
                 <div class="card">
                     <div class="box"></div>
                     <p class="subtext">this is some subtext under an illustration or image</p>
