--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="content-two">
-            <div class="quote-container">
+            <div class="quote-container left-content right-content">
                 <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p class="quote-source">-Thor, God of Thunder</p>
             </div>
